fixed ng-show for contact social media icons (no errors -- removed brackets); aligned profile pic as vertical center (flex) for popup; adjusted max-height and max-width for profile pic in popup to adjust with screen widths

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -396,12 +396,17 @@ header{
 			}
 
 			.profile-img {
+				align-items: center;
+				align-content: center;
+				display: flex;
 				height: 35em;
 				padding: 0;
 
 				img {
+					height: auto;
 					max-height: 95%;
 					margin: 0 auto;
+					max-width: 100%;
 					width: auto;
 				}
 			}
